# 2020_gfx_engine

./: .gitmodules  CMakeLists.txt
shaders/: CMakeLists.txt  compile.cmake  triangle.frag  triangle_vert.vert
src/: CMakeLists.txt  application.cpp  application.h  main.cpp  systems.cpp  systems.h
src/event/: CMakeLists.txt  event.h  event_handler.cpp  event_handler.h  event_manager.cpp  event_manager.h
src/gal/: CMakeLists.txt  command.h  command_buffer.cpp  command_buffer.h  commands.cpp  commands.h  gal.cpp  gal.h  gal_buffer.h  gal_buffer_impl.h  gal_command_buffer.h  gal_pipeline.h  gal_platform.cpp  gal_platform.h  gal_shader.h  gal_shader_impl.h  gal_texture.h  gal_texture_impl.h  gal_texture_sampler.h  object.cpp  object.h  objects.cpp  objects.h  platform.cpp  platform.h  texture_sampler.h
src/gal/internal/: CMakeLists.txt  interface.h
src/gal/internal/opengl/: CMakeLists.txt  interface.cc
src/gal/object_impl/: CMakeLists.txt  gal_buffer_impl.h  gal_command_buffer_impl.h  gal_object.h  gal_pipeline_impl.h  gal_shader_impl.h  gal_texture_impl.h  gal_texture_sampler_impl.h  texture_sampler_impl.h
src/gal/opengl/: CMakeLists.txt  command_buffer_gl.cpp  command_gl.cpp  commands_gl.cpp  gal_buffer_impl_gl.cpp  gal_buffer_impl_gl.h  gal_command_buffer_gl.cpp  gal_gl.h  gal_platform_gl.cpp  gal_platform_gl.h  gal_shader_impl_gl.cpp  gal_shader_impl_gl.h  gal_texture_impl_gl.cpp  gal_texture_impl_gl.h  id_converter.cpp  id_converter.h  object_gl.cpp  objects_gl.cpp  platform_gl.cpp  platform_gl.h
src/gal/opengl/object_impl/: CMakeLists.txt  gal_buffer_impl_gl.cpp  gal_buffer_impl_gl.h  gal_pipeline_impl_gl.cpp  gal_pipeline_impl_gl.h  gal_shader_impl_gl.cpp  gal_shader_impl_gl.h  gal_texture_impl_gl.cpp  gal_texture_impl_gl.h  gal_texture_sampler_impl_gl.cpp  gal_texture_sampler_impl_gl.h  texture_sampler_impl_gl.cpp  texture_sampler_impl_gl.h
src/gal/vulkan/: CMakeLists.txt  gal_command_buffer_vk.cpp  gal_platform_vk.cpp  gal_platform_vk.h
src/gal/vulkan/object_impl/: CMakeLists.txt  gal_buffer_impl_vk.cpp  gal_buffer_impl_vk.h  gal_command_buffer_impl_vk.cpp  gal_command_buffer_impl_vk.h  gal_pipeline_impl_vk.cpp  gal_pipeline_impl_vk.h  gal_shader_impl_vk.cpp  gal_shader_impl_vk.h
src/input/: CMakeLists.txt  input_manager.h
src/logging/: CMakeLists.txt  logging.hpp
src/platform/: CMakeLists.txt  impl_creator.h  input_manager.cpp  input_manager.h  input_source.h  platform.cpp  platform.h  window.cpp  window.h
src/platform/glfw/: CMakeLists.txt  impl_creator_glfw.cpp  impl_creator_glfw.h  input_source_glfw.cpp  input_source_glfw.h  platform_glfw.cpp  platform_glfw.h  shared_state.cpp  shared_state.h  window_glfw.cpp  window_glfw.h
src/render/: CMakeLists.txt  mesh.cpp  mesh.h  model.h  render.h  renderer.cpp  renderer.h  resource_manager.h
src/resource/: CMakeLists.txt  gal_resource.cpp  gal_resource.h  gal_resource_manager.cpp  gal_resource_manager.h  image_loader.cpp  image_loader.h  model_loader.cpp  model_loader.h  model_loader_unittest.cpp  resource.cpp  resource.h  resource_base.cpp  resource_base.h  resource_gal.cpp  resource_gal.h  resource_manager.cpp  resource_manager.h  resource_manager_base.cpp  resource_manager_base.h  resource_manager_gal.cpp  resource_manager_gal.h  resource_system.cpp  resource_system.h
src/scene/: CMakeLists.txt  entity.cpp  entity.h  scene.cpp  scene.h
src/window/: CMakeLists.txt  event.h  event_consumer.cpp  event_consumer.h  window.cpp  window.h  window_impl.h  window_internal.h  window_manager.cpp  window_manager.h  window_surface.h
src/window/glfw/: CMakeLists.txt  event_store.cpp  event_store.h  window_glfw.cpp  window_glfw.h  window_internal_glfw.cpp  window_internal_glfw.h  window_manager_glfw.cpp  window_manager_glfw.h  window_manager_impl_glfw.cpp  window_manager_impl_glfw.h
src/window/vulkan/: CMakeLists.txt  window_surface_vk.cpp  window_surface_vk.h
